filter from other api

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
                 <input name="search" class="input search" type="text" placeholder="Please Search...">
             </div>
         </div>
+        <div class="user-list">
+            <label for="languages">users</label>
+            <select name="" id="users">
+            </select>
+        </div>
         <div class="todo-box">
             <div class="todo">
                 <input type="checkbox" checked>
@@ -27,6 +32,7 @@
             <ul></ul>
         </div>
     </div>
+    <script src="data.js"></script>
     <script src="script.js"></script>
 </body>
 
